# cp437g

./: .gitignore  CONTRIBUTING.md  COPYING  README.md  pyproject.toml
.github/workflows/: tests.yml
src/: cp437g.py
tests/: test_cp437g.py
