[project]
name = "cp437g"
version = "1.0.0"
description = "Code Page 437 memory-mapped graphics codec"
license = "Unicode-3.0"
readme = "README.md"
authors = [
    { name="Jacob Shtabnoy", email="jshtabb@gmail.com" },
]
requires-python = ">=3.7,<4"
keywords = ["code page 437", "cp437", "codec", "classic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",

    "Topic :: File Formats",
    "Topic :: Text Processing :: Filters",
    "Topic :: Software Development :: Libraries :: Python Modules",

    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3 :: 3.13",
    "Programming Language :: Python :: 3 :: 3.12",
    "Programming Language :: Python :: 3 :: 3.11",
    "Programming Language :: Python :: 3 :: 3.10",
    "Programming Language :: Python :: 3 :: 3.9",
    "Programming Language :: Python :: 3 :: 3.8",
    "Programming Language :: Python :: 3 :: 3.7"
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
